Fix spacing on tutorial step bubbles when there are not many steps (#10861)

--- a/theme/tutorial-sidebar.less
+++ b/theme/tutorial-sidebar.less
@@ -1065,6 +1065,15 @@
     .topInstructionsWrapper {
         .topInstructionsSettings();
 
+        .tutorial-step-bubbles {
+            justify-content: flex-end !important;
+            gap: 1.5rem;
+
+            .circle-button {
+                margin: 0;
+            }
+        }
+
         .tutorial-callout {
             right: unset;
             top: unset;
